--- a/students.html
+++ b/students.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Research</title>
+<title>Students</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -348,150 +348,144 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">Research</h1>
+<h1 class="title toc-ignore">Students</h1>
 
 </div>
 
 
-<div id="publications" class="section level2">
-<h2>Publications</h2>
-<ol style="list-style-type: decimal">
-<li><p><a href="https://doi.org/10.1016/j.jeconom.2023.03.009"><strong>Policy
-Evaluation during a Pandemic</strong></a> [<a href="https://arxiv.org/abs/2105.06927">arXiv</a>] [<a href="/posts/five-minute-pandemic-policy">5 Minute Summary</a>] [<a href="/files/pandemic-policy/Callaway_Li_2023_Supplementary_Appendix.pdf">Supplementary
-Appendix</a>] (with Tong Li, <em>Journal of Econometrics</em>, Vol. 236,
-No. 1, 2023.)</p>
+<div id="ph.d.-main-advisor" class="section level2">
+<h2>Ph.D. Main Advisor</h2>
+<p><strong>Chengye Jia</strong>, Temple University, Ph.D. 2021</p>
 <ul>
-<li>Code: <a href="https://github.com/bcallaway11/ppe"><code>ppe</code>
-R package, on GitHub</a></li>
-</ul></li>
-<li><p><a href="https://doi.org/10.1162/rest_a_01306"><strong>Evaluating
-Policies Early in a Pandemic: Bounding Policy Effects with Nonrandomly
-Missing Data</strong></a> [<a href="https://arxiv.org/abs/2005.09605">arXiv</a>] [<a href="/files/CL-Covid-Bounds/Callaway_Li_Covid_Bounds_2022_Supplementary_Appendix.pdf">Supplementary
-Appendix</a>] (with Tong Li, Forthcoming at <em>Review of Economics and
-Statistics</em>)</p></li>
-<li><p><a href="https://link.springer.com/referenceworkentry/10.1007/978-3-319-57365-6_352-1"><strong>Difference-in-Differences
-for Policy Evaluation</strong></a> [<a href="files/Callaway-Chapter-2022/main.pdf">Draft Version</a>] [<a href="https://github.com/bcallaway11/did_chapter">complete code</a> (In:
-Zimmermann, K.F. (eds) Handbook of Labor, Human Resources and Population
-Economics., pp. 1–61, 2023)</p></li>
-<li><p><a href="https://doi.org/10.1016/j.jeconom.2022.02.001"><strong>Treatment
-Effects in Interactive Fixed Effects Models with a Small Number of Time
-Periods</strong></a> [<a href="https://arxiv.org/abs/2006.15780">arXiv</a>] [<a href="files/IFE/Callaway_Karami_2022_appendix.pdf">Supplementary
-Appendix</a>] (with Sonia Karami, <em>Journal of Econometrics</em>, Vol.
-233, No. 1, pp. 184–208, 2023.)</p>
-<ul>
-<li>Code: <a href="https://github.com/bcallaway11/ife"><code>ife</code>
-R package, on GitHub</a></li>
-</ul></li>
-<li><p><a href="https://doi.org/10.1007/s00181-020-01961-w"><strong>Heterogeneous
-Effects of Job Displacement on Earnings</strong></a> [<a href="https://arxiv.org/abs/2006.04968">arXiv</a>] (with Afrouz
-Azadikhah Jahromi, <em>Empirical Economics</em>, Vol. 62, No. 1,
-pp. 213-245, 2022.)</p></li>
-<li><p><a href="https://doi.org/10.1016/j.jeconom.2020.12.001"><strong>Difference-in-Differences
-with Multiple Time Periods</strong></a> [<a href="https://arxiv.org/abs/1803.09015">arXiv</a>] [<a href="https://pedrohcgs.github.io/files/Callaway_SantAnna_2020_supp.pdf">Supplementary
-Appendix</a>] (with Pedro H.C. Sant’Anna, <em>Journal of
-Econometrics</em>, Vol. 225, No. 2, pp. 200-230, 2021.)</p>
-<ul>
-<li>Code: <a href="https://bcallaway11.github.io/did/"><code>did</code>
-R package</a></li>
-</ul></li>
-<li><p><a href="https://doi.org/10.1016/j.jeconom.2020.02.005"><strong>Bounds on
-Distributional Treatment Effect Parameters using Panel Data with an
-Application on Job Displacement</strong></a> [<a href="https://arxiv.org/abs/2008.08117">arXiv</a>] [<a href="files/DTE/supplementary-appendix.pdf">Supplementary Appendix</a>]
-(<em>Journal of Econometrics</em>, Vol. 222, No. 2, pp. 861-881,
-2021.)</p>
-<ul>
-<li>Code: <a href="https://bcallaway11.github.io/csabounds/"><code>csabounds</code> R
-package</a></li>
-</ul></li>
-<li><p><a href="http://dx.doi.org/10.1111/obes.12355"><strong>Distributional
-Effects of a Continuous Treatment with an Application on
-Intergenerational Mobility</strong></a> [<a href="files/Callaway-Huang-2018/cfa2.pdf">Working Paper</a>] [<a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3078187">SSRN</a>]
-[<a href="files/Callaway-Huang-2018/supplementary-appendix.pdf">Supplementary
-Appendix</a>] (with Weige Huang, <em>Oxford Bulletin of Economics and
-Statistics</em>, Vol. 82, No. 4, pp. 808-842, 2020)</p>
-<ul>
-<li>Code: <a href="https://weigehuangecon.github.io/ccfa/"><code>ccfa</code> R
-package</a></li>
-</ul></li>
-<li><p><a href="http://qeconomics.org/ojs/index.php/qe/article/view/704"><strong>Quantile
-Treatment Effects in Difference in Differences Models with Panel
-Data</strong></a> [<a href="files/Callaway-Li-2019/panel-treatment-effects.pdf">Working Paper
-Version</a>] [<a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3013341">SSRN</a>]
-[<a href="files/Callaway-Li-2019/supplementary-appendix.pdf">Supplementary
-Appendix</a>] [<a href="files/Callaway-Li-2019/Callaway-Li-2019-replication-files.zip">Replication
-Materials</a>] (with Tong Li, <em>Quantitative Economics</em>, Vol. 10,
-No. 4, pp. 1579-1618, 2019)</p>
-<ul>
-<li>Code: <a href="http://bcallaway11.github.io/qte/articles/panel-qtet.html"><code>panel.qtet</code>
-method in R <code>qte</code> package</a></li>
-</ul></li>
-<li><p><a href="http://www.accessecon.com/Pubs/EB/2019/Volume39/EB-19-V39-I2-P88.pdf"><strong>Local
-Intergenerational Elasticities</strong></a> [<a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3233873">SSRN</a>]
-[<a href="http://www.accessecon.com/pubs/EB/tempPDF/file_Supplemental_0_0_120174_temp.pdf">Supplementary
-Appendix</a>] (with Weige Huang, <em>Economics Bulletin</em>, Vol. 39,
-No. 2, pp. 919-928, 2019)</p></li>
-<li><p><a href="https://www.sciencedirect.com/science/article/pii/S0304407618301027"><strong>Quantile
-Treatment Effects in Difference in Differences Models under Dependence
-Restrictions and with only Two Time Periods</strong></a> (with Tong Li
-and Tatsushi Oka, <em>Journal of Econometrics</em>, 206(2), pp. 395-413,
-2018) [<a href="https://arxiv.org/pdf/1702.03618.pdf">arXiv
-Version</a>]</p>
-<ul>
-<li>Code: <a href="http://bcallaway11.github.io/qte/articles/ddid2.html"><code>ddid2</code>
-method in R <code>qte</code> package</a></li>
-</ul></li>
-<li><p><a href="https://www.sciencedirect.com/science/article/pii/S0014498317300451"><strong>Unions,
-Workers, and Wages at the Peak of the American Labor
-Movement</strong></a> (with William Collins, <em>Explorations in
-Economic History</em>, Vol. 68, pp. 95-118, 2018) [<a href="http://www.nber.org/papers/w23516">NBER Version</a>]</p></li>
-</ol>
-</div>
-<div id="working-papers" class="section level2">
-<h2>Working Papers</h2>
-<ul>
-<li><p><a href="https://arxiv.org/abs/2202.02903"><strong>Difference-in-Differences
-when Parallel Trends Holds Conditional on Covariates</strong></a> (with
-Carolina Caetano)</p></li>
-<li><p><a href="http://arxiv.org/abs/2107.09235"><strong>Nonlinear
-Approaches to Intergenerational Income Mobility allowing for Measurement
-Error</strong></a> (with Tong Li and Irina Murtazashvili,
-submitted)</p></li>
-<li><p><a href="https://arxiv.org/abs/2107.02637"><strong>Difference-in-Differences
-with a Continuous Treatment</strong></a> [<a href="/posts/five-minute-did-continuous-treatment">5 Minute Summary</a>]
-[<a href="/files/DID-Continuous-Treatment/slides/did_reading_group.html">Slides</a>]
-(with Andrew Goodman-Bacon and Pedro H.C. Sant’Anna)</p></li>
-<li><p><strong>Regulation, Emissions, and Productivity: Evidence from
-China’s Eleventh Five-Year Plan</strong> (with Tong Li, Joel Rodrigue,
-Yuya Sasaki, and Yong Tan)</p></li>
+<li><p>Dissertation: Essays on Microeconometrics and Labor
+Economics</p></li>
+<li><p>First Placement: Assistant Professor, Shandong University of
+Finance and Economics</p></li>
+<li><p>Co-authored Papers: Inference on Counterfactual Transition
+Matrices (with Karen Yang)</p></li>
 </ul>
-</div>
-<div id="work-in-progress" class="section level2">
-<h2>Work in Progress</h2>
+<p><br><br></p>
+<p><strong>Sonia Karami</strong>, Temple University, Ph.D. 2021</p>
 <ul>
-<li><p><strong>Inference on Counterfactual Transition Matrices</strong>
-(with Chengye Jia and Karen Yan)</p></li>
-<li><p><strong>Testing the Effects of an Unobservable Factor: Do
-Marriage Prospects Affect College Major Choice?</strong> (with Alper
-Arlsan and Tong Li)</p></li>
-<li><p><strong>Difference-in-Differences with Bad Controls</strong>
-(with Carolina Caetano, Stroud Payne, and Hugo Sant’Anna)</p></li>
+<li><p>Dissertation: Essays on Developing Treatment Effect Set-ups in
+Interactive Fixed Effects Models</p></li>
+<li><p>First Placement: Data Scientist / Senior Quant, Federal Reserve
+Bank of Richmond</p></li>
+<li><p>Co-authored Papers: Treatment Effects in Interactive Fixed
+Effects Models with a Small Number of Periods (Journal of Econometrics,
+2023)</p></li>
 </ul>
-</div>
-<div id="resting-papers" class="section level2">
-<h2>Resting Papers</h2>
+<p><br><br></p>
+<p><a href="https://estsyawo.github.io/"><strong>Emmanuel
+Tsyawo</strong></a>, Temple University, Ph.D. 2020</p>
 <ul>
-<li><p><a href="https://www.econstor.eu/bitstream/10419/64846/1/72645320X.pdf"><strong>Adoption
-and Diffusion of Health Information Technology: The Case of Primary Care
-Clinics</strong></a> (with Vivek Ghosal)</p></li>
-<li><p><a href="https://arxiv.org/abs/2202.02903v1"><strong>Difference
-in Differences with Time Varying Covariates</strong></a> [<a href="posts/fms-did-time-varying-covariates">5 Minute Summary</a>] (with
-Carolina Caetano, Stroud Payne, and Hugo Sant’Anna Rodrigues)</p>
+<li><p>Dissertation: Estimating R&amp;D Interaction Structures and
+Spillover Effects</p></li>
+<li><p>First Placement: Assistant Professor, Mohammed VI Polytechnic
+University</p></li>
+</ul>
+<p><br><br></p>
+<p><strong>Qin Wei</strong>, Temple University, Ph.D. 2020</p>
 <ul>
-<li>This paper is the ancestor of (and is replaced by)
-“Difference-in-Differences with Covariates in the Parallel Trends
-Assumption” and “Difference-in-Differences with Bad Controls”</li>
+<li><p>Dissertation: Essays on Banking Mergers and Aquisitions</p></li>
+<li><p>First Placement: Despository Trust &amp; Clearing
+Corporation</p></li>
+</ul>
+<p><br><br></p>
+<p><a href="https://www.widener.edu/about/faculty-directory/afrouz-jahromi"><strong>Afrouz
+Azadikhah-Jahromi</strong></a>, Temple University, Ph.D. 2019</p>
+<ul>
+<li><p>Dissertation: Essays on Heterogeneous Treatment Effects in the
+Labor Market</p></li>
+<li><p>First Placement: Assistant Professor, Widener University</p></li>
+<li><p>Co-authored Papers: Heterogeneous Effects of Job Displacement on
+Earnings (Empirical Economics, 2022)</p></li>
+</ul>
+<p><br><br></p>
+<p><a href="https://darren1988.wixsite.com/weigehuang"><strong>Weige
+Huang</strong></a>, Temple University, Ph.D. 2019</p>
+<ul>
+<li><p>Dissertation: Essays on Microeconometrics and Finance</p></li>
+<li><p>First Placement: Assistant Professor, Wenlan School of Business,
+Zhongnan University of Economics and Law</p></li>
+<li><p>Current Position: Associate Professor, Shenzhen MSU-BIT
+University</p></li>
+<li><p>Co-authored Papers:</p>
+<ul>
+<li><p>Distributional Effects of a Continuous Treatment with an
+Application on Intergenerational Mobility (Oxford Bulletin of Economics
+and Statistics, 2020)</p></li>
+<li><p>Local Intergenerational Elasticities (Economics Bulletin,
+2019)</p></li>
 </ul></li>
 </ul>
+<p><br><br></p>
+</div>
+<div id="ph.d.-dissertation-committe-member" class="section level2">
+<h2>Ph.D. Dissertation Committe Member</h2>
+<p><a href="https://hsantanna.org/"><strong>Hugo Sant’Anna</strong></a>,
+University of Georgia, in progress</p>
+<ul>
+<li>Co-authored Papers: Difference-in-differences with bad controls
+(with Carolina Caetano and Stroud Payne)</li>
+</ul>
+<p><br><br></p>
+<p><a href="https://sites.google.com/view/pablotroncoso"><strong>Pablo
+Troncoso</strong></a>, University of Georgia, Ph.D. 2023</p>
+<ul>
+<li><p>Dissertation: Essays in Formal Labor Supply and Intergenerational
+Mobility</p></li>
+<li><p>First Placement: Instructional Assistant Professor, University of
+Houston</p></li>
+</ul>
+<p><br><br></p>
+<p><strong>Chenchen Xie</strong>, Temple University, Ph.D. 2021</p>
+<ul>
+<li>Dissertation: Essays on Microeconometrics and Business
+Economics</li>
+</ul>
+<p><br><br></p>
+</div>
+<div id="m.a.-main-advisor" class="section level2">
+<h2>M.A. Main Advisor</h2>
+<p><strong>Stroud Payne</strong></p>
+<ul>
+<li><p>Thesis: Difference-in-Differences with Time-Varying Covariates
+and Empirical Applications</p></li>
+<li><p>Ph.D. Placement: Vanderbilt University</p></li>
+<li><p>Co-authored Papers: Difference-in-differences with bad controls
+(with Carolina Caetano and Hugo Sant’Anna)</p></li>
+</ul>
+<p><br><br></p>
+<!--
+<table style="width:100%">
+  <tr>   
+    <td width="40%"><img src="blank.jpg" alt="Chengye Jia" width="100%" > </td>
+    <td><p><b><a href="https://chengye-jia.github.io/">Chengye Jia</a></b></p><p>Temple University, Ph.D. 2021</p><p>Research Interests:  Microeconometrics, Labor Economics, Machine Learning</p><p>First Placement: Assistant Professor, Shandong University of Finance and Economics</p> </td>
+  </tr>
+  <tr>   
+    <td width="40%"><img src="blank.jpg" alt="Sonia Karami" width="100%" > </td>
+    <td><p><b><a href="https://sites.temple.edu/sonia/">Sonia Karami</a></b></p><p>Temple University, Ph.D. 2021</p><p>Research Interests:  Microeconometrics, Labor Economics, and Health Economics</p><p>First Placement: Data Scientist / Senior Quant, Federal Reserve Bank of Richmond</p></td>
+  </tr>
+  <tr>   
+    <td width="40%"><img src="blank.jpg" alt="Emmanuel Tsyawo" width="100%" > </td>
+    <td><p><b><a href="https://estsyawo.github.io/">Emmanuel Tsyawo</a></b></p><p>Temple University, Ph.D. 2020</p><p>Research Interests:  Microeconometrics and Empirical IO</p><p>First Placement: Assistant Professor, Mohammed VI Polytechnic University</p> </td>
+  </tr>
+  <tr>   
+    <td width="40%"><img src="blank.jpg" alt="Qin Wei" width="100%" > </td>
+    <td><p><b>Qin Wei</b></p><p>Temple University, Ph.D. 2020</p><p>Research Interests:  Finance and Microeconometrics</p><p>First Placement: Despository Trust & Clearing Corporation</p> </td>
+  </tr>
+  <tr>   
+    <td width="40%"><img src="https://bcallaway11.github.io/files/Afrouz.JPG" alt="Afrouz Azadikhah-Jahromi" width="100%" > </td>
+    <td><p><b><a href="https://www.widener.edu/about/faculty-directory/afrouz-azadikhah-jahromi">Afrouz Azadikhah-Jahromi</a></b></p><p>Temple University, Ph.D. 2019</p><p>Research Interests:  Labor Economics and Microeconometrics</p><p>First Placement: Assistant Professor, Widener University</p> </td>
+  </tr>
+  <tr><td>&nbsp;</td><td>&nbsp;</td></tr>
+  <tr>   
+    <td width="40%"><img src="https://bcallaway11.github.io/files/weige-photo.jpg" alt="Weige Huang" width="100%" > </td>
+    <td><p><b><a href="https://huang.netlify.com">Weige Huang</a></b></p><p>Temple University, Ph.D. 2019</p><p>Research Interests:  Microeconometrics and Finance</p><p>First Placement:  Assistant Professor, Wenlan School of Business, Zhongnan University of Economics and Law</p> </td>
+  </tr>
+</table>
+-->
 </div>
 
 
